Fix some properties

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "Mariners coloring note",
+  "app_title": "Mariners Coloring Notes",
   "Kyle Seager": "Kyle Seager",
   "Mariner Moose": "Mariner Moose",
   "Mariners Logo 1": "Mariners Logo 1",
